Remodifies Merge between HW3 & 4
Fixes all overwritten work from HW3 to HW4 without losing improvements caught in HW3 or the progress accomplished in HW4. List is also phased out in favor for ArrayList to retain minor conformity within course's covered material.