@@ -4,62 +4,63 @@ import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.List;
 import java.util.Objects;
 import java.util.function.Consumer;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
-import java.lang.Integer;
 
-import ioOperation.Repository;
-import model.*;
-import view.*;
+import model.InventoryDataAccess;
+import model.InventoryItem;
+import view.InventoryView;
 
 public class CtrlerInventory {
 
 	private InventoryView view;
-	private InventoryModel model;
-	private Repository repository;
+	private InventoryDataAccess model;
 	private String state = "Main";
 	private InventoryItem searchResult;
 
-	public CtrlerInventory(InventoryView view, InventoryModel model, Repository repository) {
+	private final Consumer<InventoryItem> setTxtFields = item -> {
+		view.setTxtName(item.getName());
+		view.setTxtQuantity(String.valueOf(item.getQuantity()));
+		view.setTxtPrice(String.valueOf(item.getPrice()));
+	};
+
+	// Simplified helper methods for above
+
+	public CtrlerInventory(InventoryView view, InventoryDataAccess model) {
 		this.view = view;
 		this.model = model;
-		this.repository = repository;
 
-		InventoryModel loadedModel = null;
-		loadedModel = repository.loadInventory();
-		
-		model.setItems(loadedModel.getItems());
-
+		// Initializes table with pulled data from loaded database
 		view.newTable(
-			    new ArrayList<>(model.getItems()), 
-			    item -> new Object[]{
-			        item.getID(),
-			        item.getName(),
-			        item.getQuantity(),
-			        item.getDisplayPrice()
-			    }
-			);
+				new ArrayList<>(model.getInventoryList()), 
+				item -> new Object[]{
+						item.getID(),
+						item.getName(),
+						item.getQuantity(),
+						item.getDisplayPrice()
+				}
+				);
 
+		// "Delete" Button listener
 		view.getBtnDelete().addActionListener(new ActionListener() {
+			@Override
 			public void actionPerformed(ActionEvent e) {
 				// Immediately switch everything BUT the ID field OFF for editing
 				view.setState(InventoryView.InventoryState.ID_ON);
-
 				// Update the state to be Delete 1 & display the next phase of the inquiry
 				state = "D1";
 				view.swapSouthPanel();
 			}
 		});
 
-		// "Update" button listener
+		// "Update" Button listener
 		view.getBtnUpdate().addActionListener(new ActionListener() {
+			@Override
 			public void actionPerformed(ActionEvent e) {
 				// Immediately switch everything BUT the ID field OFF for editing
 				view.setState(InventoryView.InventoryState.ID_ON);
-
 				// Update the state to be Update 1 & display the next phase of the inquiry
 				state = "U1";
 				view.swapSouthPanel();
@@ -68,14 +69,10 @@ public class CtrlerInventory {
 
 		// "Add" Button listener
 		view.getBtnAdd().addActionListener(new ActionListener() {
+			@Override
 			public void actionPerformed(ActionEvent e) {
 				// Immediately switch everything BUT the ID field ON for editing
 				view.setState(InventoryView.InventoryState.ID_OFF);
-
-				// Automatically calculates the next ID before inserting into the ID Field
-				String ID = "";
-				ID = String.valueOf(model.getNextID());
-				view.setTxtID(ID);
 
 				// Update the state to "Add" & show final south panel
 				state = "A";
@@ -85,6 +82,7 @@ public class CtrlerInventory {
 
 		// "Back" Button listener
 		view.getBtnBack().addActionListener(new ActionListener() {
+			@Override
 			public void actionPerformed(ActionEvent e) {
 				// Assumes that the fields picked are already
 				if (state != "D2") {
@@ -92,22 +90,29 @@ public class CtrlerInventory {
 				} else {
 					view.clearDetailFields();
 				}
-
 				switch (state) {
-				case "U2":
-					state = "U1";
-					view.setState(InventoryView.InventoryState.ID_ON);
-					break;
-				case "D2":
-					state = "D1";
-					view.setState(InventoryView.InventoryState.ID_ON);
-					break;
-				default:
-					state = "Main";
-					view.setState(InventoryView.InventoryState.DISABLE);
-					view.swapSouthPanel();
-					break;
+					case "U2":
+						state = "U1";
+						view.setState(InventoryView.InventoryState.ID_ON);
+						break;
+					case "D2":
+						state = "D1";
+						view.setState(InventoryView.InventoryState.ID_ON);
+						break;
+					default:
+						state = "Main";
+						view.setState(InventoryView.InventoryState.DISABLE);
+						view.swapSouthPanel();
+						break;
 				}
+			}
+		});
+
+		// "Clear" Button listener
+		view.getBtnClear().addActionListener(new ActionListener() {
+			@Override
+			public void actionPerformed(ActionEvent e) {
+				view.clearEditibleFields();
 			}
 		});
 
@@ -118,7 +123,9 @@ public class CtrlerInventory {
 			}
 		});
 
+		// "Submit" Button listener
 		view.getBtnSubmit().addActionListener(new ActionListener() {
+			@Override
 			public void actionPerformed(ActionEvent e) {
 				// Locks the fields in an uneditable manner, preventing any potential tampering
 				// with the fields before reading occurs
@@ -128,34 +135,37 @@ public class CtrlerInventory {
 				boolean stateChange = false;
 
 				if (isPhase1()) {
+
 					/**
 					 * Phase 1: Process ID lookup for Update or Delete
 					 */
 					searchResult = searchInventory();
+
 					if (searchResult != null) {
 						setTxtFields.accept(searchResult);
 
 						switch (state.charAt(0)) {
-						case 'U':
-							view.setState(InventoryView.InventoryState.ID_OFF);
-							state = "U2"; // Transition to Update phase 2
-							break;
-						case 'D':
-							view.setState(InventoryView.InventoryState.DELETE);
-							state = "D2"; // Transition to Delete phase 2
-							break;
+							case 'U':
+								view.setState(InventoryView.InventoryState.ID_OFF);
+								state = "U2"; // Transition to Update phase 2
+								break;
 
-						/**
-						 * Under NO circumstance should this be called during runtime. If it does, I
-						 * screwed up in the code in this segment
-						 */
-						default:
-							view.failedEntry("Missing State", List.of("state: " + state));
-							break;
+							case 'D':
+								view.setState(InventoryView.InventoryState.DELETE);
+								state = "D2"; // Transition to Delete phase 2
+								break;
+
+								/**
+								 * Under NO circumstance should this be called during runtime. If it does, I
+								 * screwed up in the code in this segment
+								 */
+							default:
+								view.failedEntry("Missing State", new ArrayList<>(Arrays.asList("state: " + state)));
+								break;
 						}
 					} else {
 						// 1. Call Failed Entry error
-						view.failedEntry("Integer DNE", List.of("ID"));
+						view.failedEntry("Integer DNE", new ArrayList<>(Arrays.asList("ID")));
 
 						// 2. Does not change existing state string
 
@@ -165,35 +175,36 @@ public class CtrlerInventory {
 						view.setState(InventoryView.InventoryState.ID_ON);
 					}
 				} else {
+
 					/**
 					 * Operation Phase (A, U2, D2): Properly execute the operation desired
 					 */
 					switch (state.charAt(0)) {
-					case 'A':
-						stateChange = addExecution();
-						break;
-					case 'U':
-						stateChange = updateExecution();
-						break;
-					case 'D':
-						stateChange = deleteExecution();
-						break;
+						case 'A':
+							stateChange = addExecution();
+							break;					
+						case 'U':
+							stateChange = updateExecution();
+							break;						
+						case 'D':
+							stateChange = deleteExecution();
+							break;
 
-					/**
-					 * Under NO circumstance should this be called during runtime. If it does, I
-					 * screwed up in the code in this segment
-					 */
-					default:
-						// 1. Call Failed Entry error
-						view.failedEntry("Missing State", List.of("state: " + state));
+							/**
+							 * Under NO circumstance should this be called during runtime. If it does, I
+							 * screwed up in the code in this segment
+							 */
+						default:
+							// 1. Call Failed Entry error
+							view.failedEntry("Missing State", new ArrayList<>(Arrays.asList("state: " + state)));
 
-						// 2. Does not change existing state string
+							// 2. Does not change existing state string
 
-						// 3. Does not change stateChange to true
+							// 3. Does not change stateChange to true
 
-						// 4. Re-enable ID field for field correction or back to previous scene
-						view.setState(InventoryView.InventoryState.ID_OFF);
-						break;
+							// 4. Re-enable ID field for field correction or back to previous scene
+							view.setState(InventoryView.InventoryState.ID_OFF);
+							break;
 					}
 
 					// Conditional scene switch if CRUD operation is a success
@@ -201,26 +212,26 @@ public class CtrlerInventory {
 						view.successEntry();
 						state = "Main";
 						view.newTable(
-							    model.getItems(), 
-							    item -> new Object[]{
-							        item.getID(),
-							        item.getName(),
-							        item.getQuantity(),
-							        item.getDisplayPrice()
-							    }
-							);
+								model.getInventoryList(),
+								item -> new Object[]{
+										item.getID(),
+										item.getName(),
+										item.getQuantity(),
+										item.getDisplayPrice()
+								}
+								);
 						view.swapSouthPanel();
-					} else {
+					} else {						
 						/**
 						 * Operation Phase (A or U2): Reopen previously closed fields used in operation
 						 */
 						switch (state.charAt(0)) {
-						case 'A':
-							view.setState(InventoryView.InventoryState.ID_OFF);
-							break;
-						case 'U':
-							view.setState(InventoryView.InventoryState.ID_OFF);
-							break;
+							case 'A':
+								view.setState(InventoryView.InventoryState.ID_OFF);
+								break;							
+							case 'U':
+								view.setState(InventoryView.InventoryState.ID_OFF);
+								break;
 						}
 					}
 				}
@@ -231,69 +242,35 @@ public class CtrlerInventory {
 	// Simplified helper methods for above
 
 	/**
-	 * Public method combining validation and search
+	 * Final operation in Controller side before Model takes over Creation protocol. Has to verify
+	 * the new input information from the user (name, quantity, price) before sending it off to
+	 * the model for database operation testing.
 	 * 
-	 * @return Found item or null if invalid/not found
+	 * @return {@code true} or {@code false} depending on success/failure of operation
 	 */
-	public InventoryItem searchInventory() {
-		Integer existingID = validateInt(view.getTxtID().getText(), "ID", false);
-		return existingID > 0 ? findID(existingID) : null;
-	}
-
-	public void saveInventory() {
-		repository.saveInventory(model);
-	}
-
-	private boolean isPhase1() {
-		return (state.length() == 2) && (state.charAt(1) == '1');
-	}
-
-	private final Consumer<InventoryItem> setTxtFields = item -> {
-		view.setTxtName(item.getName());
-		view.setTxtQuantity(String.valueOf(item.getQuantity()));
-		view.setTxtPrice(String.valueOf(item.getPrice()));
-	};
-
 	private boolean addExecution() {
 		// Assigns all fields with validation - if necessary
-		List<Supplier<Object>> fieldValidators = Arrays.asList(() -> Integer.parseInt(view.getTxtID().getText()),
+		ArrayList<Supplier<Object>> fieldValidators = new ArrayList<>(Arrays.asList(
 				() -> validateString(view.getTxtName().getText(), "Name", false),
 				() -> validateInt(view.getTxtQuantity().getText(), "Quantity", false),
-				() -> validateFloat(view.getTxtPrice().getText(), false));
+				() -> validateDouble(view.getTxtPrice().getText(), false)));
 
-		// Will automatically iterate through the list to search for anything that is
-		// null
-		List<Object> results = fieldValidators.stream().map(Supplier::get).collect(Collectors.toList());
+		// Will automatically iterate through the list to search for anything that is null
+		ArrayList<Object> results = fieldValidators.stream()
+				.map(Supplier::get)
+				.collect(Collectors.toCollection(ArrayList::new));
 
 		// Searches results to see if anything retains null, indicating a failed field
 		if (results.stream().anyMatch(Objects::isNull)) {
 			return false;
 
 		} else {
-			int ID = (Integer) results.get(0);
-			String name = (String) results.get(1);
-			int quantity = (Integer) results.get(2);
-			float price = (Float) results.get(3);
+			String name = (String) results.get(0);
+			int quantity = (Integer) results.get(1);
+			double price = (Double) results.get(2);
 
-			model.addItem(new InventoryItem(ID, name, quantity, price));
-			return true;
+			return model.addItem(new InventoryItem(name, quantity, price));
 		}
-	}
-
-	private boolean updateExecution() {
-		List<Supplier<Object>> fieldValidators = Arrays.asList(
-				() -> validateString(view.getTxtName().getText(), "Name", true),
-				() -> validateInt(view.getTxtQuantity().getText(), "Quantity", true),
-				() -> validateFloat(view.getTxtPrice().getText(), true));
-
-		List<Object> results = fieldValidators.stream().map(Supplier::get).collect(Collectors.toList());
-
-		String updatedName = (results.get(0) != null) ? (String) results.get(0) : searchResult.getName();
-		int updatedQuantity = (results.get(1) != null) ? (Integer) results.get(1) : searchResult.getQuantity();
-		float updatedPrice = (results.get(2) != null) ? (Float) results.get(2) : searchResult.getPrice();
-
-		model.updateItem(searchResult.getID(), updatedName, updatedQuantity, updatedPrice);
-		return true;
 	}
 
 	private boolean deleteExecution() {
@@ -303,30 +280,98 @@ public class CtrlerInventory {
 
 		// Method already attempts to remove if the whole item is found in the inventory
 		// system
-		model.removeItem(findID(id));
+		model.deleteItem(findID(id));
 		return true;
 	}
 
 	/**
 	 * Near pure search operation - 1 validation for ID not existing;
-	 * 
+	 *
 	 * <p>Precon: ID field has already been verified to be a proper integer
-	 * 
+	 *
 	 * @param ID an integer that may or may not exist within the inventory
 	 * @return Found item or null w/ failedEntry throw
 	 */
 	private InventoryItem findID(int ID) {
-		for (InventoryItem item : model.getItems()) {
-			if (item.getID() == ID) {
-				return item;
+		searchResult = model.getItem(ID);
+		return (searchResult instanceof InventoryItem) ? searchResult : null;
+	}
+
+	private boolean isPhase1() {
+		return (state.length() == 2) && (state.charAt(1) == '1');
+	}
+
+	/**
+	 * Public method combining validation and search
+	 *
+	 * @return Found item or null if invalid/not found
+	 */
+	public InventoryItem searchInventory() {
+		Integer existingID = validateInt(view.getTxtID().getText(), "ID", false);
+		searchResult = findID(existingID);
+		return (searchResult instanceof InventoryItem) ? searchResult : null;
+	}
+
+	/**
+	 * Final operation in Controller side before Model takes over Update protocol. Has to verify
+	 * the new input information from the user (name, quantity, price) before sending it off to
+	 * the model for database operation testing.
+	 * 
+	 * @return {@code true} or {@code false} depending on success/failure of operation
+	 */
+	private boolean updateExecution() {
+		ArrayList<Supplier<Object>> fieldValidators = new ArrayList<>(Arrays.asList(
+				() -> validateString(view.getTxtName().getText(), "Name", true),
+				() -> validateInt(view.getTxtQuantity().getText(), "Quantity", true),
+				() -> validateDouble(view.getTxtPrice().getText(), true)));
+
+		ArrayList<Object> results = fieldValidators.stream()
+				.map(Supplier::get)
+				.collect(Collectors.toCollection(ArrayList::new));
+
+		String updatedName = (results.get(0) != "") ? (String) results.get(0) : searchResult.getName();
+		int updatedQuantity = (results.get(1) != null) ? (Integer) results.get(1) : searchResult.getQuantity();
+		double updatedPrice = (results.get(2) != null) ? (Double) results.get(2) : searchResult.getPrice();
+
+		return model.updateItem(new InventoryItem(searchResult.getID(), updatedName, updatedQuantity, updatedPrice));
+	}
+
+	/**
+	 * Validates Double input from text field
+	 *
+	 * @return Validated Double or null if invalid
+	 */
+	private Double validateDouble(String input, boolean isUpdate) {
+		input = validateString(input, "Price", isUpdate);
+		// Terminates due to empty field without repeatedly mentioning field is empty
+		if (input.isBlank()) {
+			return null;
+
+		} else {
+			try {
+				Double value = Double.parseDouble(input);
+				if (value >= 0) {
+					return value;
+				} else {
+					// Silently converts if we're in the update state
+					if (!isUpdate) {
+						view.failedEntry("Double Domain Violation", new ArrayList<>(Arrays.asList(("Price"))));
+					}
+					return null;
+				}
+			} catch (NumberFormatException e) {
+				// Silently converts if we're in the update state
+				if (!isUpdate) {
+					view.failedEntry("Not A Double", new ArrayList<>(Arrays.asList(("Price"))));
+				}
+				return null;
 			}
 		}
-		return null;
 	}
 
 	/**
 	 * Validates Integer input from text field
-	 * 
+	 *
 	 * @return Validated Integer or null if invalid
 	 */
 	private Integer validateInt(String input, String fieldName, boolean isUpdate) {
@@ -334,7 +379,6 @@ public class CtrlerInventory {
 		// Terminates due to empty field without repeatedly mentioning field is empty
 		if (input.isBlank()) {
 			return null;
-
 		} else {
 			try {
 				int value = Integer.parseInt(input);
@@ -343,47 +387,14 @@ public class CtrlerInventory {
 				} else {
 					// Silently converts if we're in the update state
 					if (!isUpdate) {
-						view.failedEntry("Integer Domain Violation", List.of(fieldName));
+						view.failedEntry("Integer Domain Violation", new ArrayList<>(Arrays.asList((fieldName))));
 					}
 					return null;
 				}
 			} catch (NumberFormatException e) {
 				// Silently converts if we're in the update state
 				if (!isUpdate) {
-					view.failedEntry("Not An Integer", List.of(fieldName));
-				}
-				return null;
-			}
-		}
-	}
-
-	/**
-	 * Validates Float input from text field
-	 * 
-	 * @return Validated float or null if invalid
-	 */
-	private Float validateFloat(String input, boolean isUpdate) {
-		input = validateString(input, "Price", isUpdate);
-		// Terminates due to empty field without repeatedly mentioning field is empty
-		if (input.isBlank()) {
-			return null;
-
-		} else {
-			try {
-				float value = Float.parseFloat(input);
-				if (value > 0) {
-					return value;
-				} else {
-					// Silently converts if we're in the update state
-					if (!isUpdate) {
-						view.failedEntry("Float Domain Violation", List.of("Price"));
-					}
-					return null;
-				}
-			} catch (NumberFormatException e) {
-				// Silently converts if we're in the update state
-				if (!isUpdate) {
-					view.failedEntry("Not A Float", List.of("Price"));
+					view.failedEntry("Not An Integer", new ArrayList<>(Arrays.asList((fieldName))));
 				}
 				return null;
 			}
@@ -392,7 +403,7 @@ public class CtrlerInventory {
 
 	/**
 	 * Validates String input from text field
-	 * 
+	 *
 	 * @return Validated String or empty string if invalid
 	 */
 	private String validateString(String input, String fieldName, boolean isUpdate) {
@@ -404,10 +415,9 @@ public class CtrlerInventory {
 			return input.trim();
 		} else {
 			if (!isUpdate) {
-				view.failedEntry("Blank", List.of(fieldName));
+				view.failedEntry("Field left Blank", new ArrayList<>(Arrays.asList((fieldName))));
 			}
-			return null;
+			return "";
 		}
 	}
-
 }
